--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".MovieListActivity"
+            android:name=".ui.activity.MovieListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -23,28 +23,28 @@
         </activity>
 
         <activity
-            android:name=".MovieDetailActivity"
+            android:name=".ui.activity.MovieDetailActivity"
             android:label="@string/title_movie_detail"
-            android:parentActivityName=".MovieListActivity"
+            android:parentActivityName=".ui.activity.MovieListActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MovieListActivity" />
+                android:value=".ui.activity.MovieListActivity" />
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".ui.activity.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MovieListActivity"
+            android:parentActivityName=".ui.activity.MovieListActivity"
             android:theme="@style/SettingsTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.nex3z.popularmovies.MovieListActivity" />
+                android:value=".ui.activity.MovieListActivity" />
         </activity>
 
         <provider
             android:authorities="com.nex3z.popularmovies"
-            android:name=".data.MovieProvider" />
+            android:name=".data.provider.MovieProvider" />
 
         <service
             android:name=".service.MovieService"
