--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,15 +10,22 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
-        buildConfigField "String", "API_KEY", "\"YOUR_API_KEY\""
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        applicationVariants.all { variant ->
+            variant.buildConfigField "String", "API_KEY", "\""+getApiKey()+"\""
+        }
     }
+}
+
+def getApiKey(){
+    def Properties props = new Properties()
+    props.load(new FileInputStream(new File('secrets.properties')))
+    return props['API_KEY']
 }
 
 dependencies {
