--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nex3z.popularmovies" >
+    package="com.nex3z.popularmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,49 +9,27 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".app.App">
-
+        android:name=".app.App"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.MovieListActivity"
+            android:name=".ui.activity.MovieGridActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activity.MovieDetailActivity"
             android:label="@string/title_movie_detail"
-            android:parentActivityName=".ui.activity.MovieListActivity"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:parentActivityName=".ui.activity.MovieGridActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.MovieListActivity" />
+                android:value=".ui.activity.MovieGridActivity" />
         </activity>
-
-        <activity
-            android:name=".ui.activity.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".ui.activity.MovieListActivity"
-            android:theme="@style/SettingsTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.MovieListActivity" />
-        </activity>
-
-        <provider
-            android:authorities="com.nex3z.popularmovies"
-            android:name=".data.provider.MovieProvider" />
-
-        <service
-            android:name=".service.MovieService"
-            android:exported="false" >
-        </service>
-
     </application>
 
 </manifest>
