--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'org.parceler:parceler:0.2.16'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.16'
+    compile 'jp.wasabeef:recyclerview-animators:2.1.0'
 }
