--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".app.App"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.MovieGridActivity"
@@ -33,9 +33,18 @@
         </activity>
 
         <provider
-            android:authorities="com.nex3z.popularmovies"
-            android:name=".data.provider.MovieProvider" />
+            android:name=".data.provider.MovieProvider"
+            android:authorities="com.nex3z.popularmovies" />
 
+        <activity
+            android:name=".ui.activity.DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.Details"
+            android:parentActivityName=".ui.activity.MovieGridActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.activity.MovieGridActivity" />
+        </activity>
     </application>
 
 </manifest>
