--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -48,7 +48,7 @@ ext {
             supportAppcompatV7: "com.android.support:appcompat-v7:${supportAppcompatV7Version}",
             supportDesign: "com.android.support:design:${supportAppcompatV7Version}",
             constraintLayout: "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}",
-            rxAndroid: "io.reactivex.rxjava2:rxjava:${rxAndroidVersion}",
+            rxAndroid: "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
     ]
 
     presentationTestDependencies = [
