--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     })
 
     implementation domainDependencies.rxJava
+    implementation domainDependencies.supportAnnotations
 
 }
