--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,9 +54,11 @@ dependencies {
     implementation presentationDependencies.supportAppcompatV7
     implementation presentationDependencies.supportDesign
     implementation presentationDependencies.recyclerView
+    implementation presentationDependencies.cardView
     implementation presentationDependencies.constraintLayout
     implementation presentationDependencies.rxAndroid
     implementation presentationDependencies.butterKnife
     annotationProcessor presentationDependencies.butterKnifeCompiler
     implementation presentationDependencies.swipy
+    implementation presentationDependencies.fresco
 }
